# node-pocketsphinx

./: .gitignore  CMakeLists.txt  package.json
pocketsphinx/: CMakeLists.txt
sphinxbase/: CMakeLists.txt
